tests/fixtures/invalid/pow_bytes_bool.py
# Cannot call pow() with Bytes, Bool
x = pow(b"hello", True)
